created mapping service, and application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ set(CPACK_PACKAGE_VERSION_PATCH "1")
 set(CPACK_SOURCE_IGNORE_FILES "/gtest/;/googletest/")
 set(CPACK_PACKAGE_CONTACT "Aaron Spiteri")
 set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/postinst")
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/prerm")
+set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/resources/scripts/postinst")
+set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/resources/scripts/prerm")
 
 include(CPack)
 
@@ -39,18 +39,15 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}/resources/fatcnt.env"
 )
 
 # This is done at an application level
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/postinst")
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/prerm")
-
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/scripts/fatcnt.service"
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/scripts/fatcnt.service"
         DESTINATION /etc/systemd/system
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/resources/manifests/manifest.json"
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/resources/manifest.json"
         DESTINATION /opt/fatcnt/etc/
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/bin/fatcnt" DESTINATION 
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/fatcnt" DESTINATION 
   /opt/fatcnt/bin 
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
